--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,22 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# STM32
+
+SI/
+
+cscope.*
+
+tags
+
+
+# *.crf
+
+src/MDK/LIST/*
+!src/MDK/LIST/keep-dir.txt
+src/MDK/OUT/*
+!src/MDK/OUT/keep-dir.txt
+*.swp
+*.uvguix.*
+JLinkLog.txt
